# ML-Zoomcamp-2025-Capstone_Project

./: .dockerignore  Dockerfile  README.md  evaluate.py  main.py  predict.py  pyproject.toml  test_predict_local.py  train.py
notebooks/: eda.ipynb
training/: train_model.ipynb
